<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_drawer"
    app:startDestination="@id/trainingProgressFragment">
    <fragment
        android:id="@+id/trainingProgressFragment"
        android:name="com.example.virtualcoach.app.ui.TrainingProgressFragment"
        android:label="@string/destination_training_progress_title"
        tools:layout="@layout/fragment_training_progress">
        <action
            android:id="@+id/action_trainingProgressFragment_to_loginFragment2"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/trainingProgressFragment" />
    </fragment>
    <fragment
        android:id="@+id/preferencesFragment"
        android:name="com.example.virtualcoach.app.ui.PreferencesFragment"
        android:label="@string/destination_configuration_title">
        <action
            android:id="@+id/action_settingsFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/trainingProgressFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/editPlanFragment"
        android:name="com.example.virtualcoach.app.ui.EditPlanFragment"
        android:label="@string/destination_edit_plan_title"
        tools:layout="@layout/fragment_edit_plan">
        <action
            android:id="@+id/action_editPlanFragment_to_editSessionFragment"
            app:destination="@id/editSessionFragment" />
    </fragment>
    <fragment
        android:id="@+id/editSessionFragment"
        android:name="com.example.virtualcoach.app.ui.EditSessionFragment"
        android:label="@string/destination_edit_session_title" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.virtualcoach.usermanagement.modules.login.LoginFragment"
        android:label="@string/destination_login_title"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_trainingProgressFragment"
            app:destination="@id/trainingProgressFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.virtualcoach.usermanagement.modules.register.RegisterFragment"
        android:label="@string/destination_register_title"
        tools:layout="@layout/fragment_register">
        <argument
            android:name="username"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="" />
        <argument
            android:name="password"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="" />
    </fragment>
</navigation>