<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_plan_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/fragment_horizontal_margin"
    android:layout_marginTop="@dimen/fragment_vertical_margin"
    android:layout_marginEnd="@dimen/fragment_horizontal_margin"
    android:layout_marginBottom="@dimen/fragment_vertical_margin"
    tools:context=".app.ui.EditPlanFragment">

    <TextView
        android:id="@+id/edit_plan_session_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_plan_session_label"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/edit_plan_sessions_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/edit_plan_sessions_empty"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/edit_plan_session_label"
        app:layout_constraintTop_toBottomOf="@+id/edit_plan_session_label" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_edit_sessions"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_plan_session_label"
        tools:listitem="@layout/row_item_edit_session" />

    <ImageButton
        android:id="@+id/btn_add_session"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toBottomOf="@+id/edit_plan_session_label"
        app:layout_constraintStart_toEndOf="@+id/edit_plan_session_label"
        app:layout_constraintTop_toTopOf="@+id/edit_plan_session_label"
        android:contentDescription="@string/edit_plan_add_session" />

</androidx.constraintlayout.widget.ConstraintLayout>